# IntelliEditor

./: .gitignore  CMakeLists.txt  README.md
include/: editor_core.h  llm_interface.h  nlp_engine.h  prompts.h  rule_engine.h  utils.h
src/: CMakeLists.txt
src/editor/: exporter.c  gap_buffer.c  undo_redo.c
src/llm/: llm_interface.c  llm_thread.c  prompts.c
src/nlp/: hunspell_wrap.c  nlp_engine.c  tokenizer.c
src/ui/: main_window.c
src/utils/: config.c  encoding.c
tests/: test_llm.c  test_nlp.c
